change of balance display, scrollbars for main and tx table, bugfixes (pagination, coin selection, unsigned labeling) & some styling finetuning

--- a/src/cryptoadvance/specter/static/styles.css
+++ b/src/cryptoadvance/specter/static/styles.css
@@ -205,7 +205,6 @@ main{
     /*justify-content: center;*/
     padding: 0;
     /*padding: 30px 0 20px 0;*/
-    overflow-y: scroll;
 }
 nav.side > .item, nav.side > div > .item{
     padding: 10px 0;
@@ -471,6 +470,24 @@ input:hover{
 .flex-item{
     margin: 0.5em;
 }
+.smaller-card{
+    min-width: 220px;
+    padding: 15px;
+    background: transparent;
+    border: 1px solid var(--cmap-border);
+    border-radius: 4px;
+    color: #ccc;
+    font-size: 0.65em;
+    text-align: center;
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+    justify-content: center;
+    margin: 5px;
+}
+.smaller-card:hover{
+    border: 1px solid hsl(217, 15%, 55%);
+}
 .small-card{
     min-width: 220px;
     /*height: 250px;*/
@@ -658,8 +675,6 @@ table{
 .table-holder{
     padding: 0 30px;
     width: 100%;
-    overflow-y: scroll;
-    /*overflow-x: scroll;*/
 }
 .full-width{
     width: 100%;
@@ -692,29 +707,67 @@ tbody tr:hover{
 .tx{
     max-width: 200px;
 }
-.scroll{
+
+/* Scroll functionality along x axis
+   (mainly used for xpub keys)
+*/
+
+.scroll {
     padding: 0 10px;
 }
-.scroll > *{
+.scroll > * {
     /* ugly fix for firefox - scrolling child element */
     display: block;
     overflow-x: scroll;
     width: 100%;
     padding: 20px 0;
 }
-.scroll > *::-webkit-scrollbar,
-#side-content::-webkit-scrollbar,
-main::-webkit-scrollbar,
-pre::-webkit-scrollbar{
-  display: none;
-}
-/* Hide scrollbar for IE, Edge and Firefox */
-td.scroll > *,
-#side-content,
-main,pre{
+/* Hide scrollbar thumb and track for IE, Edge and Firefox */
+td.scroll > *, pre {
   -ms-overflow-style: none;  /* IE and Edge */
   scrollbar-width: none;  /* Firefox */
-  scrollbar-height: none;  /* Firefox */
+}
+/* Hide scrollbar thumb and track for Chrome */
+td.scroll > *::-webkit-scrollbar,
+pre::-webkit-scrollbar {
+    display: none;
+}
+
+/* Standard scrollbar along y axis
+scrollbar-color and scrollbar-width only supported by Firefox */
+
+main {
+  overflow-y: scroll;
+  scrollbar-color: hsl(40 100% 75%) hsl(40 100% 50%);
+  scrollbar-width: thin;
+}
+
+/* Not supported by Firefox & Safari on iOS */
+main::-webkit-scrollbar {
+  width: 0.7em;
+}
+main::-webkit-scrollbar-track {
+  background: hsl(40 100% 50%);
+  border-radius: 100vw;
+  margin-top: 3.5em;
+  margin-bottom: 1em;
+}
+main::-webkit-scrollbar-thumb {
+  background: hsl(40 100% 75%);
+  border: 0.175em solid hsl(40 0% 40%);
+  border-radius: 100vw;
+}
+main::-webkit-scrollbar-thumb:hover {
+  background: hsl(40 50% 10%);
+}
+
+/* No scrollbar for side-content */
+#side-content::-webkit-scrollbar {
+  display: none;
+}
+
+#side-content {
+    scrollbar-width: none;
 }
 
 table a, .address-link{
